fixed mobile and social icons

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 						<h4 class="team-member__heading">Kimberly Thompson</h4>
 						<p class="team-member-info">Marketer</p>
 						<section class="team-member__contacts">
-						<a href="#">Twitter</a>
-						<a href="#">Facebook</a>
-						<a href="#">Pinterest</a>
+						<a class="team-member__twitter" href="#"> <span class="visually-hidden">Twitter</span> </a>
+						    <a class="team-member__facebook" href="#"><span class="visually-hidden">Facebook</span> </a>
+						    <a class="team-member__pinterest" href="#"><span class="visually-hidden">Pinterest</span> </a>
 
 						</section>
 					</section>
@@ -164,9 +164,9 @@
 					    <h4 class="team-member__heading">Rico Massimo</h4>
 					    <p class="team-member-info">Coder</p>
 					    <section class="team-member__contacts">
-						    <a href="#">Twitter</a>
-						    <a href="#">Facebook</a>
-						    <a href="#">Pinterest</a>
+						    <a class="team-member__twitter" href="#"> <span class="visually-hidden">Twitter</span> </a>
+						    <a class="team-member__facebook" href="#"><span class="visually-hidden">Facebook</span> </a>
+						    <a class="team-member__pinterest" href="#"><span class="visually-hidden">Pinterest</span> </a>
 
 					    </section>
 				    </section>
@@ -177,9 +177,9 @@
 						<h4 class="team-member__heading">Uku Mason</h4>
 						<p class="team-member-info">Graphic designer</p>
 						<section class="team-member__contacts">
-							<a href="#">Twitter</a>
-							<a href="#">Facebook</a>
-							<a href="#">Pinterest</a>
+							<a class="team-member__twitter" href="#"> <span class="visually-hidden">Twitter</span> </a>
+						    <a class="team-member__facebook" href="#"><span class="visually-hidden">Facebook</span> </a>
+						    <a class="team-member__pinterest" href="#"><span class="visually-hidden">Pinterest</span> </a>
 						</section>
 					</section>
 				</div>
@@ -215,17 +215,15 @@
 				<h4 class="visually-hidden">Keep in touch</h4>
 				<ul class="social__list">
 					<li class="social__item">
-						<a href="#" class="social__link social__link--vkontakte">We in Twitter </a>
+						<a href="#" class="social__link social__link--twitter"><span class="visually-hidden">We in Twitter</span>  </a>
 					</li>
 					<li class="social__item">
-						<a href="#" class="social__link social__link--vkontakte">We in Facebook</a>
+						<a href="#" class="social__link social__link--facebook"><span class="visually-hidden">We in Twitter</span></a>
 					</li>
 					<li class="social__item">
-						<a href="#" class="social__link social__link--facebook">We in Pinterest</a>
+						<a href="#" class="social__link social__link--pinterest"><span class="visually-hidden">We in Twitter</span></a>
 					</li>
-					<li class="social__item">
-						<a href="#" class="social__link social__link--instagram">We in google plus</a>
-					</li>
+					
 				</ul>	
 			</section>
 		
