--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
 			<h1 class="visually-hidden">Web studio Golden</h1>
 			<p class="page-header__welcome">Welcome to our studio</p>
 			<p class="page-header__meet">It's nice to meet you</p>
-			<button class="page-header__button button" type="button">Tell me more</button>
+			<a href="#more"><button class="page-header__button button" type="button">Tell me more</button></a>
+			
 		</div>
 	</header>
+	<a id="more" href=""></a>
 	<main class="page-main">
 		<section class="services">
 			<a name="services"></a>	
